# DBTruck3

./: .gitignore  INSTALL.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  test_settings.py  tests.py
.git-rewrite/: backup-refs  commit  index  parse  revs
dbtruck/: __init__.py  adapcast.py  convert.py  dbtruck.py
scripts/: ignorevenv.bat  ignorevenv.ps1  runcmd.bat  runsh
